# LocalAI-WhisperSummarizer

./: .env.example  .gitignore  .mcp.json.example  CLAUDE.md  DESIGN_SYSTEM.md  Dockerfile  GEMINI.md  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml  fix_test_models.py  flake.nix  m4a_transcribe.db-shm  m4a_transcribe.db-wal  pyproject.toml  test_server.py
.github/workflows/: ci.yml  comprehensive-tests.yml  production-deploy.yml  release.yml
app/: __init__.py  main.py
app/api/: __init__.py  models.py
app/api/v1/: __init__.py  backup.py  files.py  health.py  monitoring.py  status.py  transcriptions.py
app/core/: __init__.py  config.py  database.py  enhanced_logging.py  environment.py  logging.py  middleware.py  migration.py
app/services/: __init__.py  alert_system.py  audio_processor.py  auto_recovery_service.py  backup_service.py  cache_service.py  error_tracking.py  file_validation_service.py  health_service.py  log_management.py  memory_optimizer.py  monitoring_service.py  ollama_service.py  performance_analyzer.py  production_monitoring.py  summary_service.py  transcription_service.py  whisper_service.py
deploy/gcp/: cloudbuild.yaml  env.list
deploy/gcp/terraform/: main.tf
docs/: meeting_format_verification.md  whisper_speed_verification.md
docs/design/m4a-transcribe/: README.md  api-endpoints.md  architecture.md  database-schema.sql  dataflow.md  interfaces.ts
docs/spec/: m4a-transcribe-requirements.md
docs/tasks/: m4a-transcribe-tasks.md
scripts/: deploy.sh  fix_mime_type_constraint.py  init_db.py  run-tests.sh  setup-env.sh  setup-models.sh  validate-config.py  verify_headers_logic.py  verify_markdown_logic.py  verify_meeting_format.py  verify_whisper_speed.py
static/: dashboard.html  index.html
static/css/: style.css  styles.css
static/js/: app-full.js  app.js
tests/: conftest.py  test_api.py  test_audio_processing.py  test_database.py  test_main.py
tests/e2e/: test_full_workflow.py
tests/fixtures/: test_data.py
tests/integration/: test_api_endpoints.py
tests/mocks/: mock_services.py
tests/unit/: test_models.py  test_services.py
