[project]
name = "localai-whispersummarizer"
version = "1.0.0"
description = "M4A音声ファイルからテキスト転写とAI要約を生成するシステム"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "M4A Transcribe Team", email = "team@example.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.11,<3.12"
dependencies = [
    # Web フレームワーク
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "gunicorn>=21.2.0",
    # データベース
    "sqlalchemy>=2.0.0",
    # データ検証・変換
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    # 音声処理
    "faster-whisper>=0.10.0",
    "torch>=2.0.0,<2.6.0", # macOS x86_64互換性のため
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    # AI処理
    "ollama>=0.1.0",
    "httpx>=0.25.0",
    # ファイル処理
    "python-multipart>=0.0.6",
    "aiofiles>=23.0.0",
    # セキュリティ・暗号化
    "cryptography>=41.0.0",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    # ユーティリティ
    "python-dotenv>=1.0.0",
    "structlog>=23.0.0",
    "click>=8.1.0",
    # 非同期処理
    "celery>=5.3.0",
    "redis>=5.0.0",
    # バリデーション・型チェック
    "validators>=0.22.0",
    "python-magic>=0.4.27",
    # システム監視・メトリクス
    "psutil>=5.9.0",
    # Google Cloud
    "google-cloud-storage>=2.10.0",
    "google-cloud-secret-manager>=2.16.0",
    "aiohttp>=3.12.15",
]

[project.optional-dependencies]
dev = [
    # テスト
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.25.0",  # テスト用HTTPクライアント
    
    # リンター・フォーマッター
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.6.0",
    
    # ドキュメント
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
    
    # 開発ユーティリティ
    "pre-commit>=3.5.0",
    "watchdog>=3.0.0",
]

test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.25.0",
]

docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
]

[project.scripts]
m4a-transcribe = "app.cli:main"
init-db = "scripts.init_db:main"

[project.urls]
Homepage = "https://github.com/your-org/m4a-transcribe"
Repository = "https://github.com/your-org/m4a-transcribe.git"
Issues = "https://github.com/your-org/m4a-transcribe/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "app/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# =================================
# 開発ツール設定
# =================================

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--disable-warnings",
    "-ra",
    "--tb=short",
    "--durations=10",
    "--color=yes"
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests", 
    "e2e: End-to-end tests",
    "slow: Slow running tests",
    "performance: Performance tests",
    "security: Security tests"
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning"
]

[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@abstractmethod",
]

[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["app", "tests"]
known_third_party = ["fastapi", "sqlalchemy", "pydantic"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = [
    "whisper.*",
    "librosa.*",
    "soundfile.*",
    "ollama.*",
    "magic.*",
]
ignore_missing_imports = true

[tool.flake8]
max-line-length = 88
extend-ignore = [
    "E203",  # whitespace before ':'
    "W503",  # line break before binary operator
    "E501",  # line too long (handled by black)
]
exclude = [
    ".git",
    "__pycache__",
    "dist",
    "build",
    ".venv",
    ".eggs",
    "*.egg",
]

# =================================
# UV設定
# =================================

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.6.0",
    "pre-commit>=3.5.0",
]

# =================================
# アプリケーション固有の設定
# =================================

[tool.m4a-transcribe]
# デフォルト設定
default_whisper_model = "base"
default_ollama_model = "llama2:7b"
max_file_size_mb = 50
supported_formats = ["audio/m4a", "audio/mp4"]
default_output_formats = ["txt", "json"]

# パフォーマンス設定
processing_timeout_seconds = 900
summary_timeout_seconds = 300
max_concurrent_jobs = 1

# セキュリティ設定
enable_file_validation = true
auto_cleanup_hours = 24
log_retention_days = 30
